# savReaderWriter

./: .dockerignore  .gitignore  Dockerfile  MANIFEST.in  VERSION  appveyor.yml  dev-requirements.txt  docker-compose.yml  optional-requirements.txt  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml
savReaderWriter/: __init__.py  generic.py  header.py  helpers.py  savHeaderReader.py  savReader.py  savReaderNp.py  savWriter.py
savReaderWriter/documentation/: conf.py
savReaderWriter/unit_tests/: test_Generic.py  test_SPSSIOError.py  test_SavHeaderReader_accented_varset.py  test_SavHeaderReader_ioLocale.py  test_SavHeaderReader_metadata_report.py  test_SavHeaderReader_metadata_roundtrip_ioUtf8.py  test_SavReaderNp.py  test_SavReader_Mrsets.py  test_SavReader_file_report.py  test_SavReader_ioUtf8_mode.py  test_SavReader_leading_zero.py  test_SavReader_operators.py  test_SavReader_str2date.py  test_SavReader_utilities.py  test_SavWriter_Mrsets.py  test_SavWriter_dates_elaborate.py  test_SavWriter_ioUtf8_mode.py  test_SavWriter_mode_cp.py  test_SavWriter_non_ascii_filename.py  test_SavWriter_writerows_arrays_etc.py
savReaderWriter/util/: download_mainframe_libs.py  gprof2dot.py  savViewer.py  writer.py
