[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
authors = [
  {name = "Albert-Jan Roskam", email = "fomcl@yahoo.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: POSIX :: AIX",
    "Operating System :: POSIX :: HP-UX",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: SunOS/Solaris",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Cython",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database"
]
dependencies = [
    "numpy==1.26.4",
    "pandas==2.2.3",
]
description = "Read and write SPSS files."
dynamic = ["version"]
license = {file = "LICENSE.txt"}
name = "savReaderWriter"
readme = "README.md"
requires-python = '~=3.9'

[tool.setuptools.dynamic]
version = {attr = "savReaderWriter.__version__"}

[project.optional-dependencies]
cython = [
    "Cython==3.0.11"
]
dev = [
    "gocept.testing==1.10",
    "numpydoc==0.5",
    "pytest==7.4.4",
    "sphinxcontrib-exceltable==0.1",
    "Sphinx==1.3.1",
]

[project.urls]
documentation = "https://pythonhosted.org/savReaderWriter/"
homepage = "https://bitbucket.org/fomcl/savreaderwriter"
source = "https://bitbucket.org/fomcl/savreaderwriter"
